--- a/css/styles.css
+++ b/css/styles.css
@@ -6,4 +6,18 @@ h1 {
   font-family: monospace;
   font-size: 20px;
   line-height: inherit;
-}
+  }
+
+p {
+  color: rgb(79,131,155);
+  text-align: center;
+  font-style: oblique;
+  font-size: 100 px;
+  }
+
+ul {
+  color: grey;
+  text-align: justify;
+  }
+
+background: linear-gradient (white,blue)
